--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "antd": "^5.12.5", // 使用一个较新的稳定版本
+    "antd": "^5.12.5",
     "axios": "^1.6.2",
     "react-router-dom": "^6.21.1"
   },
